--- a/phaser3-tutorial-src/Main.html
+++ b/phaser3-tutorial-src/Main.html
@@ -5,7 +5,8 @@
     <title>Making your first Phaser 3 Game - Part 10</title>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
     <script type="text/javascript" src="Scene1.js"></script>
-     <script type="text/javascript" src="Scene2.js"></script>
+    <script type="text/javascript" src="Scene2.js"></script>
+    <script type="text/javascript" src="Ennemi.js"></script>
     <style type="text/css">
   
         body {
@@ -17,6 +18,9 @@
     <script type ="text/javascript">
         var xAxis=0;
         var yAxis=0;
+        var hp = 3;
+        var invulnerable = false;
+        
         var config = {
         type:Phaser.AUTO,
         width:3200,
